URL relativas para el buscador en todos los plenos y paginas de partidos

--- a/partidos.html
+++ b/partidos.html
@@ -35,31 +35,31 @@
         </nav>
     </header>
     <section class="partido-container">
-            <a href="/partidos/pp.html" class="partido-card-top partido-card-top-pp font-bislai">
+            <a href="/pp" class="partido-card-top partido-card-top-pp font-bislai">
                     <div class="partido-card-bg partido-card-pp"></div>
                     <h3 class="partido-card-title">PARTIDO POPULAR</h3>
                     <p class="partido-card-votos">87554 VOTOS / 26.88%</p>
                     <p class="partido-card-concejales">10 CONCEJALES</p>
             </a>
-            <a href="/partidos/zec.html" class="partido-card-top partido-card-top-zec pos-r font-bislai">
+            <a href="/zec" class="partido-card-top partido-card-top-zec pos-r font-bislai">
                     <div class="partido-card-bg partido-card-zec"></div>
                     <h3 class="partido-card-title">ZARAGOZA EN COMÚN</h3>
                     <p class="partido-card-votos">80040 VOTOS / 24.57%</p>
                     <p class="partido-card-concejales">9 CONCEJALES</p>
             </a>
-            <a href="/partidos/psoe.html" class="partido-card-top partido-card-top-psoe font-bislai">
+            <a href="/psoe" class="partido-card-top partido-card-top-psoe font-bislai">
                     <div class="partido-card-bg partido-card-psoe"></div>
                     <h3 class="partido-card-title">PSOE</h3>
                     <p class="partido-card-votos">60746 VOTOS / 18.65%</p>
                     <p class="partido-card-concejales">6 CONCEJALES</p>
             </a>
-            <a href="/partidos/cs.html" class="partido-card-top partido-card-top-cs pos-r font-bislai">
+            <a href="/cs" class="partido-card-top partido-card-top-cs pos-r font-bislai">
                     <div class="partido-card-bg partido-card-cs"></div>
                     <h3 class="partido-card-title">CIUDADANOS</h3>
                     <p class="partido-card-votos">40046 VOTOS / 12.29%</p>
                     <p class="partido-card-concejales">4 CONCEJALES</p>
             </a>
-            <a href="/partidos/cha.html" class="partido-card-top partido-card-top-cha font-bislai">
+            <a href="/cha" class="partido-card-top partido-card-top-cha font-bislai">
                     <div class="partido-card-bg partido-card-cha"></div>
                     <h3 class="partido-card-title">CHUNTA ARAGONESISTA</h3>
                     <p class="partido-card-votos">22076 VOTOS / 6.78%</p>
