--- a/cha.html
+++ b/cha.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <script type="text/javascript" src="js/tipuesearch_content.js"></script>
+    <script type="text/javascript" src="js/tipuesearch_set.js"></script>
+    <script type="text/javascript" src="js/tipuesearch.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body class="mih-100">
