corrigiendo errores tipograficos en la pagina de chunta

--- a/cha.html
+++ b/cha.html
@@ -88,7 +88,7 @@
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha optado por la abstención en 17 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha optado por la abstención en 3 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha optado por la abstención en 5 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha optado por la abstención en 11 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha optado por la abstención en 11 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="abstencion"></canvas>
@@ -103,7 +103,7 @@
             <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra del <strong>Partido Popular</strong> en 42 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> nunca ha votado en contra de <strong>Zaragoza En Común</strong>.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra del <strong>Partido Socialista Obrero Español</strong> en 9 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra de <strong>Chunta Aragonesista</strong> en 12 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra de <strong>Ciudadanos</strong> en 12 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-en-contra"></canvas>
@@ -118,7 +118,7 @@
             <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor del <strong>Partido Popular</strong> en 13 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor de <strong>Zaragoza En Común</strong> en 43 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor del <strong>Partido Socialista Obrero Español</strong> en 43 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor de <strong>Chunta Aragonesista</strong> en 14 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor de <strong>Ciudadanos</strong> en 14 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-a-favor"></canvas>
