fix link ciudadanos

--- a/partidos.html
+++ b/partidos.html
@@ -53,7 +53,7 @@
                     <p class="partido-card-votos">60746 VOTOS / 18.65%</p>
                     <p class="partido-card-concejales">6 CONCEJALES</p>
             </a>
-            <a href="/cs" class="partido-card-top partido-card-top-cs pos-r font-bislai">
+            <a href="/ciudadanos" class="partido-card-top partido-card-top-cs pos-r font-bislai">
                     <div class="partido-card-bg partido-card-cs"></div>
                     <h3 class="partido-card-title">CIUDADANOS</h3>
                     <p class="partido-card-votos">40046 VOTOS / 12.29%</p>
