--- a/cha.html
+++ b/cha.html
@@ -142,6 +142,8 @@
     <script type="text/javascript" src="../js/Chart.min.js"></script>
     <script type="text/javascript" src="../js/chartjs-plugin-datalabels.min.js"></script>
     <script type="text/javascript" src="../js/cha.js"></script>
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
+    <script type="text/javascript" src="js/mapa-cha.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -159,5 +161,4 @@
     ga('send', 'pageview');
     </script>
 </body>
-
 </html>
