--- a/ciudadanos.html
+++ b/ciudadanos.html
@@ -152,6 +152,8 @@
     <script type="text/javascript" src="../js/Chart.min.js"></script>
     <script type="text/javascript" src="../js/chartjs-plugin-datalabels.min.js"></script>
     <script type="text/javascript" src="../js/ciudadanos.js"></script>
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
+    <script type="text/javascript" src="js/mapa-cs.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -169,5 +171,4 @@
     ga('send', 'pageview');
     </script>
 </body>
-
 </html>
