--- a/zec.html
+++ b/zec.html
@@ -149,6 +149,8 @@
     <script type="text/javascript" src="../js/Chart.min.js"></script>
     <script type="text/javascript" src="../js/chartjs-plugin-datalabels.min.js"></script>
     <script type="text/javascript" src="../js/zec.js"></script>
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
+    <script type="text/javascript" src="js/mapa-zec.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -166,5 +168,4 @@
     ga('send', 'pageview');
     </script>
 </body>
-
 </html>
