--- a/404.html
+++ b/404.html
@@ -2,16 +2,19 @@
 <html lang="es">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Bislai - Resultados de búsqueda </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/tipuesearch_content.js"></script>
+    <script type="text/javascript" src="js/tipuesearch_set.js"></script>
+    <script type="text/javascript" src="js/tipuesearch.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Playfair+Display" rel="stylesheet">
 </head>
 
 <body class="mih-100">
-    <header class="font-0 border-b1 borderc-greyc w-100 zi-10 bgc-header-home">
+    <header class="font-0 w-100 zi-10 bgc-white">
         <nav class="padding-0__5-1 nav-grid">
             <a href="http://bislai.co" class="link font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first"><span class="link-name">BISLAI</span></a>
             <div class="w-100--m maw-70p--l padding-0__5-0">
@@ -33,28 +36,8 @@
         </nav>
     </header>
     <section class="error">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-             viewBox="0 0 100 103">
-        <path d="M26.3,45.6v4.9c0,0.6,0.4,1,1,1h3.3v37c0,0.6,0.4,1,1,1h35.2c0.6,0,1-0.4,1-1v-37h3.3c0.6,0,1-0.4,1-1v-4.9c0-0.6-0.4-1-1-1
-            h-6c-0.4-6.1-4.4-10.5-10.5-12.1c2.8-1.7,4.7-4.7,4.7-8.2v-1.2c0-1.8-0.5-3.6-1.4-5c0,0,0-0.1,0-0.1c0.3-2.2-0.6-6.6-6.1-7.7
-            c-2.4-0.5-5,0.1-7.3,0.6c-2,0.5-4,0.9-4.6,0.2c-0.3-0.4-0.8-0.6-1.3-0.4c-1,0.4-1.2,2.1-1.1,3.5c0.1,2.5,1,4.4,2.4,5.3
-            c-0.4,1.1-0.7,2.3-0.7,3.6v1.2c0,3.5,1.9,6.5,4.7,8.2c-6.1,1.6-10.1,6.1-10.5,12.1h-6C26.8,44.6,26.3,45,26.3,45.6z M55.7,15.7
-            c-1.6-1.3-3.7-2.1-5.9-2.1h-1.2c-3.2,0-6.1,1.6-7.8,4.1c-0.3-0.3-0.6-0.6-0.8-1.2c-0.5-1.1-0.5-2.5-0.5-3.4c1.4,0.6,3.4,0.1,5.5-0.4
-            c2.1-0.5,4.5-1,6.4-0.6C54.3,12.8,55.3,14.4,55.7,15.7z M48.6,31.8c-4.1,0-7.5-3.4-7.5-7.5v-1.2c0-4.1,3.4-7.5,7.5-7.5h1.2
-            c4.1,0,7.5,3.4,7.5,7.5v1.2c0,4.1-3.4,7.5-7.5,7.5H48.6z M63.1,44.6H50.2V42c0.5-0.3,0.9-0.9,0.9-1.6v-2.5c0-1-0.8-1.9-1.9-1.9
-            s-1.9,0.8-1.9,1.9v2.5c0,0.7,0.4,1.2,0.9,1.6v2.6H35.3c0.6-7.5,7.3-10.8,13.9-10.8S62.6,37.1,63.1,44.6z M32.6,51.5h33.2v36H32.6
-            V51.5z M28.3,46.6h41.7v2.9h-3.3H31.6h-3.3V46.6z"/>
-        <path d="M70.2,36.8c2.2,1.9,4.9,2.9,7.7,2.9c0.3,0,0.6,0,0.9,0c3.2-0.2,6-1.7,8.1-4.1c2.1-2.4,3.1-5.4,2.9-8.6
-            c-0.2-3.2-1.7-6-4.1-8.1c-2.4-2.1-5.4-3.1-8.6-2.9c-3.2,0.2-6,1.7-8.1,4.1c-1.5,1.7-2.4,3.8-2.8,6l-2.6,3c-0.2,0.2-0.3,0.5-0.2,0.7
-            c0,0.3,0.1,0.5,0.3,0.7l4.3,3.7C68.6,35.2,69.3,36.1,70.2,36.8z M71.5,35.3c-0.8-0.7-1.4-1.4-1.9-2.2c-0.1-0.1-0.1-0.2-0.2-0.2
-            l-3.6-3.1l2.2-2.5c0.1-0.1,0.2-0.3,0.2-0.5c0.2-1.9,1-3.7,2.3-5.2c1.7-2,4.1-3.2,6.7-3.4c0.2,0,0.5,0,0.7,0c2.4,0,4.6,0.8,6.4,2.4
-            c2,1.7,3.2,4.1,3.4,6.7c0.2,2.6-0.7,5.2-2.4,7.1c-1.7,2-4.1,3.2-6.7,3.4C76,37.9,73.5,37,71.5,35.3z"/>
-        <path d="M10,26.4c1.5,5.2,6.2,8.6,11.4,8.6c1.1,0,2.1-0.1,3.2-0.4c2.2-0.6,4.1-1.8,5.6-3.5L34,30c0.5-0.1,0.8-0.7,0.7-1.2l-1.5-5.4
-            c0-1.1-0.1-2.3-0.4-3.4c-1.8-6.3-8.3-9.9-14.6-8.2C11.9,13.6,8.2,20.1,10,26.4z M18.7,13.7c5.2-1.5,10.7,1.6,12.1,6.8
-            c0.3,1,0.4,1.9,0.4,2.9c0,0.1,0,0.2,0,0.3l1.3,4.6l-3.2,0.9c-0.2,0.1-0.4,0.2-0.5,0.3c-1.3,1.5-2.9,2.6-4.8,3.1
-            c-5.2,1.5-10.7-1.6-12.1-6.8S13.5,15.2,18.7,13.7z"/>
-        </svg>
-
+        <p class="aaron">La información es poder. Pero como todo poder, hay quienes quieren mantenerlo para sí mismos.
+            <a class="swartz" href="https://en.wikipedia.org/wiki/Aaron_Swartz">Aaron Swartz | 1986 - 2013</a></p>
     </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <div class="maw-60 grid-footer">
