ajustando los estilos de la pagina de estadisticas

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -45,57 +45,71 @@
         </div>
         <div class='scroll__text'>
             <div class='step' data-step='1'>
-                <p class="title-estadisticas">¿Cuántas votaciones por unanimidad?</p>
-                <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">486 votaciones</span>, de las cuales, <span class="font-w8">189</span> se han votado por unanimidad.</p>
+                <div class="step-blanco">
+                    <p class="title-estadisticas">¿Cuántas votaciones por unanimidad?</p>
+                    <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">486 votaciones</span>, de las cuales, <span class="font-w8">190</span> se han votado por unanimidad.</p>
+                </div>
             </div>
             <div class='step' data-step='2'>
-                <p class="title-estadisticas">Los tripartitos del pleno</p>
-                <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
-                <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 57 votaciones.</span></p>
-                <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">53 votaciones</span>.</p>
+                <div class="step-blanco">
+                    <p class="title-estadisticas">Los tripartitos del pleno</p>
+                    <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
+                    <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 57 votaciones.</span></p>
+                    <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">53 votaciones</span>.</p>
+                </div>
             </div>
             <div class='step' data-step='3'>
-                <p class="title-estadisticas">¿Quién ha presentado más mociones?</p>
-                <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 323 mociones, y se han retirado 30.</span></p>
-                <p> En primer lugar <span class="font-w8">C'S</span> con <span class="font-w8">80</span>.</p>
-                <p> En segundo lugar el <span class="font-w8">PSOE</span> con <span class="font-w8">79</span>.</p>
-                <p> En tercer lugar el <span class="font-w8">PP</span> con <span class="font-w8">77</span>.</p>
-                <p> En cuarto lugar <span class="font-w8">CHA</span> con <span class="font-w8">65</span>.</p>
-                <p> En quinto lugar <span class="font-w8">ZEC</span> con <span class="font-w8">45</span>.</p>
+                <div class="step-blanco">
+                    <p class="title-estadisticas">¿Quién ha presentado más mociones?</p>
+                    <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 323 mociones, y se han retirado 30.</span></p>
+                    <p> En primer lugar <span class="font-w8">C'S</span> con <span class="font-w8">83</span>.</p>
+                    <p> En segundo lugar el <span class="font-w8">PSOE</span> con <span class="font-w8">82</span>.</p>
+                    <p> En tercer lugar el <span class="font-w8">PP</span> con <span class="font-w8">80</span>.</p>
+                    <p> En cuarto lugar <span class="font-w8">CHA</span> con <span class="font-w8">67</span>.</p>
+                    <p> En quinto lugar <span class="font-w8">ZEC</span> con <span class="font-w8">47</span>.</p>
+                </div>
             </div>
             <div class='step' data-step='4'>
-                <p class="title-estadisticas">¿Quién se ha abstenido más?</p>
-                <p>En primer lugar <span class="font-w8">ZEC</span> con 52.</span>
-                </p>
-                <p>En segundo lugar <span class="font-w8">C'S</span> con 46.
-                    <p>En tercer lugar <span class="font-w8">CHA</span> con 45.</p>
-                    <p> En cuarto lugar el <span class="font-w8">PP</span> con 38.</p>
-                    <p> En quinto lugar el <span class="font-w8">PSOE</span> con 24.</p>
+                <div class="step-blanco">
+                    <p class="title-estadisticas">¿Quién se ha abstenido más?</p>
+                    <p>En primer lugar <span class="font-w8">ZEC</span> con 52.</span>
+                    </p>
+                    <p>En segundo lugar <span class="font-w8">C'S</span> con 46.
+                        <p>En tercer lugar <span class="font-w8">CHA</span> con 45.</p>
+                        <p> En cuarto lugar el <span class="font-w8">PP</span> con 38.</p>
+                        <p> En quinto lugar el <span class="font-w8">PSOE</span> con 24.</p>
+                </div>
             </div>
             <div class='step' data-step='5'>
-                <p class="title-estadisticas">¿Quién vota más en contra?</p>
-                <p>En primer lugar <span class="font-w8">ZEC</span> con 102.</p>
-                <p> En segundo lugar el <span class="font-w8">PP</span> con 96.</p>
-                <p>En tercer lugar <span class="font-w8">CHA</span> con 67.</p>
-                <p> En cuarto lugar el <span class="font-w8">PSOE</span> con 51.</p>
-                <p> En quinto lugar <span class="font-w8">C'S</span> con 39.</p>
+                <div class="step-blanco">
+                    <p class="title-estadisticas">¿Quién vota más en contra?</p>
+                    <p>En primer lugar <span class="font-w8">ZEC</span> con 106.</p>
+                    <p> En segundo lugar el <span class="font-w8">PP</span> con 96.</p>
+                    <p>En tercer lugar <span class="font-w8">CHA</span> con 67.</p>
+                    <p> En cuarto lugar el <span class="font-w8">PSOE</span> con 51.</p>
+                    <p> En quinto lugar <span class="font-w8">C'S</span> con 39.</p>
+                </div>
             </div>
             <div class='step' data-step='6'>
-                <p class="title-estadisticas">¿Quién vota más a favor?</p>
-                <p>En primer lugar <span class="font-w8">C'S</span> con 156.</p>
-                <p> En segundo lugar el <span class="font-w8">PSOE</span> con 149.</p>
-                <p> En tercer lugar <span class="font-w8">CHA</span> con 117.</p>
-                <p> En cuarto lugar el <span class="font-w8">PP</span> con 101.</p>
-                <p> En quinto lugar <span class="font-w8">ZEC</span> con 82.</p>
+                <div class="step-blanco">
+                    <p class="title-estadisticas">¿Quién vota más a favor?</p>
+                    <p>En primer lugar <span class="font-w8">C'S</span> con 159.</p>
+                    <p> En segundo lugar el <span class="font-w8">PSOE</span> con 152.</p>
+                    <p> En tercer lugar <span class="font-w8">CHA</span> con 120.</p>
+                    <p> En cuarto lugar el <span class="font-w8">PP</span> con 103.</p>
+                    <p> En quinto lugar <span class="font-w8">ZEC</span> con 82.</p>
+                </div>
             </div>
             <div class='step' data-step='7'>
-                <p class="title-estadisticas">La soledad del pleno</p>
-                <p>El número de veces que cada partido ha votado en solitario.</p>
-                <p>En primer lugar el <span class="font-w8">PP</span> con 102.</p>
-                <p> En segundo lugar <span class="font-w8">ZEC</span> con 75.</p>
-                <p> En tercer lugar <span class="font-w8">C'S</span> con 50.</p>
-                <p> En cuarto lugar <span class="font-w8">CHA</span> con 30.</p>
-                <p> En quinto lugar el <span class="font-w8">PSOE</span> con 16.</p>
+                <div class="step-blanco">
+                    <p class="title-estadisticas">La soledad del pleno</p>
+                    <p>El número de veces que cada partido ha votado en solitario.</p>
+                    <p>En primer lugar el <span class="font-w8">PP</span> con 102.</p>
+                    <p> En segundo lugar <span class="font-w8">ZEC</span> con 79.</p>
+                    <p> En tercer lugar <span class="font-w8">C'S</span> con 50.</p>
+                    <p> En cuarto lugar <span class="font-w8">CHA</span> con 30.</p>
+                    <p> En quinto lugar el <span class="font-w8">PSOE</span> con 16.</p>
+                </div>
             </div>
         </div>
     </section>
