pintando el mapa del psoe

--- a/pp.html
+++ b/pp.html
@@ -61,7 +61,7 @@
             <canvas id="historico"></canvas>
         </div>
     </section>
-    <section class="mapa-container">
+    <section class="mapa-container mapa-container-pp">
         <div id="map-wrap">
             <div id="map">
                 <span class="tooltip-title">PARTIDO POPULAR 1987-2015</span>
