--- a/cha.html
+++ b/cha.html
@@ -17,6 +17,7 @@
 </head>
 
 <body class="mih-100">
+    color del logo de cha #ac0018
     <header class="font-0 w-100 zi-10 bgc-white">
         <nav class="padding-0__5-1 nav-grid">
             <a href="http://bislai.co" class="link font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first"><span class="link-name">BISLAI</span></a>
