--- a/cha.html
+++ b/cha.html
@@ -17,7 +17,6 @@
 </head>
 
 <body class="mih-100">
-    color del logo de cha #ac0018
     <header class="font-0 w-100 zi-10 bgc-white">
         <nav class="padding-0__5-1 nav-grid">
             <a href="http://bislai.co" class="link font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first"><span class="link-name">BISLAI</span></a>
@@ -54,10 +53,10 @@
             <p class="partidos-cabecera-texto-derecha">Concurrió por primera vez a unas elecciones en 1987.</p>
         </div>
     </section>
-    <section class="mapa-container">
+    <section class="mapa-container mapa-container-cha">
         <div id="map-wrap">
             <div id="map">
-                <span class="tooltip-title">ELECCIONES MUNICIPALES 2015</span>
+                <span class="tooltip-title">CHUNTA ARAGONESISTA 1987-2015</span>
             </div>
         </div>
     </section>
@@ -154,7 +153,7 @@
     <script type="text/javascript" src="../js/chartjs-plugin-datalabels.min.js"></script>
     <script type="text/javascript" src="../js/cha.js"></script>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
-    <script type="text/javascript" src="js/mapa-cha.js"></script>
+    <script type="text/javascript" src="../js/mapa-cha.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
